refactor: move foodstuff and unit display value responsibility into frontend
