# backend/app/api/routes/foodstuffs.py
@@ -4,9 +4,8 @@ from fastapi import APIRouter, Depends, Response, status
 from sqlalchemy.orm import Session
 
 from app.db.session import get_db, get_write_db
-from app.models.enums import Unit
 from app.schemas.errors import CONFLICT_RESPONSE, NOT_FOUND_AND_CONFLICT_RESPONSES, NOT_FOUND_RESPONSE
-from app.schemas.foodstuff import FoodstuffCreate, FoodstuffOut, FoodstuffUnitChoices, FoodstuffUpdate, FoodstuffVerboseNames
+from app.schemas.foodstuff import FoodstuffCreate, FoodstuffOut, FoodstuffUpdate
 from app.services import foodstuffs
 
 router = APIRouter()
@@ -40,22 +39,3 @@ def patch_foodstuff(
 def delete_foodstuff(foodstuff_id: int, session: Session = Depends(get_write_db, scope="function")) -> Response:
     foodstuffs.delete_foodstuff(session, foodstuff_id)
     return Response(status_code=status.HTTP_204_NO_CONTENT)
-
-
-@router.get("/foodstuffs-meta-data/verbose-names", response_model=FoodstuffVerboseNames)
-def get_foodstuff_verbose_names() -> FoodstuffVerboseNames:
-    return FoodstuffVerboseNames(
-        name="Name",
-        brand="Marke",
-        unit="Einheit",
-        unitVerbose="Einheit",
-        kcal="Kalorien",
-        carbs="Kohlenhydrate",
-        protein="Proteine",
-        fat="Fett",
-    )
-
-
-@router.get("/foodstuffs-meta-data/unit-choices", response_model=FoodstuffUnitChoices)
-def get_foodstuff_unit_choices() -> FoodstuffUnitChoices:
-    return FoodstuffUnitChoices({unit: unit.verbose_name for unit in Unit})
